--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;500;600;700&display=swap');
+
+:root {
+  /* Colors */
+  --primary-color: #ea4c89;
+  --secondary-color: #f3f3f4;
+  --text-dark: #3d3d4e;
+  --text-light: #fff;
+
+  /* Sizes */
+  --title-size: 36px;
+  --subtitle-size: 24px;
+  --body-size: 18px;
+
+  /* Fonts */
+  --font-base: 'Raleway', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  font-family: var(--font-base);
+}
+
+html {
+  background-color: var(--secondary-color);
 }
