--- a/src/components/Todos/TodoDetails.scss
+++ b/src/components/Todos/TodoDetails.scss
@@ -1,7 +1,7 @@
 form.todo__card {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
 
   padding: 50px 30px;
 
@@ -10,6 +10,85 @@ form.todo__card {
 
   &.important {
     background-color: #fff;
+  }
+
+  .todo__card-footer {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+
+    margin-top: 18px;
+    padding: 0 20px;
+
+    width: 100%;
+
+    .todo__card-cta {
+      display: flex;
+
+      .save-btn {
+        background-color: #66bb6a;
+        color: #fff;
+
+        font-size: 16px;
+
+        box-shadow: 0 0 30px 6px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        border: none;
+        outline: none;
+
+        padding: 12px 28px;
+
+        margin-right: 12px;
+
+        cursor: pointer;
+
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          scale: 1.02;
+        }
+      }
+
+      .del-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: transparent;
+        color: #ad2138;
+
+        border: none;
+        outline: none;
+
+        height: 43px;
+
+        cursor: pointer;
+
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+          scale: 1.05;
+        }
+
+        // svg {
+        //   -webkit-filter: drop-shadow(0 0 30px 6px rgba(0, 0, 0, 1));
+        //   filter: drop-shadow(0 0 30px 6px rgba(0, 0, 0, 1));
+        // }
+      }
+    }
+  }
+
+  .todo__card-main {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+
+    width: 100%;
+
+    padding: 12px 20px;
   }
 
   .todo__card-heading {
@@ -23,7 +102,6 @@ form.todo__card {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    flex: 1;
   }
 
   .round {
